--- a/src/app/components/contacts-list/contacts-list.component.html
+++ b/src/app/components/contacts-list/contacts-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h2 class="h2">All Contact Details</h2>
+        <h2 class="h2">All Contact Details of Faculty</h2>
     </div>
     <div class="table-responsive">
         <table class="table table-hover">
